--- a/be219thenextchapter-master/pom.xml
+++ b/be219thenextchapter-master/pom.xml
@@ -103,6 +103,16 @@
             <artifactId>mapstruct</artifactId>
             <version>1.4.1.Final</version>
         </dependency>
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-models</artifactId>
+            <version>2.1.1</version>
+        </dependency>
     </dependencies>
 
 
